--- a/sapper-svelte-photography/src/components/CardNewsAccounts/_CardNewsAccounts.scss
+++ b/sapper-svelte-photography/src/components/CardNewsAccounts/_CardNewsAccounts.scss
@@ -9,6 +9,11 @@ h3 {
   text-align: center;
   color: #151515;
   font-size: 2em;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 1;
+  -webkit-box-orient: vertical;
 }
 
 div {
@@ -27,4 +32,9 @@ p {
   color: #858585;
   font-size: 16px;
   text-align: center;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
 }
