--- a/sapper-svelte-photography/src/style/theme.scss
+++ b/sapper-svelte-photography/src/style/theme.scss
@@ -1,5 +1,7 @@
 // theme.scss
 $main-color: blue;
 $site-width: 1200px;
+$selected: orange;
 $transition: all 1s cubic-bezier(.25, 1, .35, 1) 0s;
 $section-padding: 108px 0 108px 0;
+$color-description: #858585;
