--- a/sapper-svelte-photography/src/components/ModalImages/_ModalImages.scss
+++ b/sapper-svelte-photography/src/components/ModalImages/_ModalImages.scss
@@ -29,7 +29,7 @@ div {
     width: 100%;
     display: flex;
     flex-direction: column;
-    height: 100%;
+    //height: 100%;
     background-color: black;
     overflow: auto;
 
