--- a/sapper-svelte-photography/src/components/UserInfo/_UserInfo.scss
+++ b/sapper-svelte-photography/src/components/UserInfo/_UserInfo.scss
@@ -14,9 +14,11 @@ section {
 }
 
 div {
-  padding: 5px 10px;
+  padding: 15px 10px;
   line-height: 1.2;
   min-width: 200px;
+  display: flex;
+  flex-direction: column;
 }
 
 p {
@@ -26,6 +28,7 @@ p {
 
 h3 {
   margin: 0;
+  flex: 1;
 }
 
 i {
