--- a/sapper-svelte-photography/src/style/theme.scss
+++ b/sapper-svelte-photography/src/style/theme.scss
@@ -5,3 +5,11 @@ $selected: orange;
 $transition: all 1s cubic-bezier(.25, 1, .35, 1) 0s;
 $section-padding: 108px 0 108px 0;
 $color-description: #858585;
+$border-radius: 10px;
+$margin-bottom: 20px;
+$color-success: #123fb1;
+$color-template: #f5365c;
+$padding: 20px;
+// Input vars
+$input-border-radius: $border-radius;
+$dashboard-aside: 260px;
