--- a/sapper-svelte-photography/src/components/Footer/_Footer.scss
+++ b/sapper-svelte-photography/src/components/Footer/_Footer.scss
@@ -2,6 +2,7 @@ footer {
   padding: 54px;
   background: #151515;
   color: #eaeaea;
+  grid-area: footer;
 
   :global(.container) {
     display: grid;
